Add reference to the JSTAT paper on drag

--- a/biblio.bib
+++ b/biblio.bib
@@ -184,6 +184,7 @@
 }
 @inproceedings{louvin2017,
 author = {Louvin, Henri and Dumonteil, Eric and Leli\`{e}vre, Tony},
+booktitle = {},
 year = {2017},
 month = {04},
 pages = {},
@@ -432,6 +433,14 @@ title = {Three-Dimensional Neutron Streaming Calculations Using Adaptive Multile
   HAL_ID = {tel-01974316},
   HAL_VERSION = {v1},
 }
+@article{lestang2019JSTAT,
+      title = {A statistical mechanics approach to the study of extreme fluctuations of the time-averaged drag acting on an obstacle immersed in a turbulent flow},
+      author = {Lestang, Thibault and Bouchet, Freddy and Lévêque Emmanuel},
+      year = {2019},
+      journal = {},
+      note = {In preparation.},
+}
+
 @article{rolland_statistical_2015,
 	title = {Statistical behavior of adaptive multilevel splitting algorithms in simple models},
 	volume = {283},
