Re-ecriture de la partie sur les algorithmes

--- a/biblio.bib
+++ b/biblio.bib
@@ -228,26 +228,13 @@ title = {Three-Dimensional Neutron Streaming Calculations Using Adaptive Multile
 	pages = {417--443}
 }
 @article{KahnHarris1951,
-	Author = {H.~Kahn and T.~E.~Harris},
+	Author = {H. Kahn and T. E. Harris},
 	Journal = {National Bureau of Standards},
 	Pages = {27--30},
 	Series = {Applied Mathematics Series},
 	Title = {{Estimation of Particle Transmission by Random Sampling}},
 	Volume = {12},
 	Year = {1951}
-	}
-	@incollection{glasserman_look_1998,
-	series = {Lecture {Notes} in {Statistics}},
-	title = {A {Look} {At} {Multilevel} {Splitting}},
-	isbn = {978-0-387-98335-6 978-1-4612-1690-2},
-	language = {en},
-	urldate = {2018-06-13},
-	booktitle = {Monte {Carlo} and {Quasi}-{Monte} {Carlo} {Methods} 1996},
-	publisher = {Springer, New York, NY},
-	author = {Glasserman, Paul and Heidelberger, Philip and Shahabuddin, Perwez and Zajic, Tim},
-	year = {1998},
-	doi = {10.1007/978-1-4612-1690-2_5},
-	pages = {98--108}
 	}
 @article{glasserman_multilevel_1999,
 	title = {Multilevel {Splitting} for {Estimating} {Rare} {Event} {Probabilities}},
@@ -732,4 +719,20 @@ doi = {10.1119/1.18168},
   pages={374002},
   year={2016},
   publisher={IOP Publishing}
+}
+@article{brehier:hal-01142704,
+  TITLE = {{Unbiasedness of some generalized adaptive multilevel splitting algorithms}},
+  AUTHOR = {Br{\'e}hier, Charles-Edouard and Gazeau, Maxime and Gouden{\`e}ge, Ludovic and Leli{\`e}vre, Tony and Rousset, Mathias},
+  URL = {https://hal.archives-ouvertes.fr/hal-01142704},
+  JOURNAL = {{Annals of Applied Probability}},
+  PUBLISHER = {{Institute of Mathematical Statistics (IMS)}},
+  VOLUME = {26},
+  NUMBER = {6},
+  PAGES = {3559 - 3601},
+  YEAR = {2016},
+  DOI = {10.1214/16-AAP1185},
+  KEYWORDS = {unbiased estimator ; Adaptive Multilevel Splitting ; Rare event},
+  PDF = {https://hal.archives-ouvertes.fr/hal-01142704/file/BGGLR.pdf},
+  HAL_ID = {hal-01142704},
+  HAL_VERSION = {v1},
 }
