--- a/jfm/draft_p2_jfm.tex
+++ b/jfm/draft_p2_jfm.tex
@@ -746,7 +746,7 @@ Consistently with section~\ref{sec:time_avg}, we aim at sampling trajectories wi
 Consequently, we fixed $T_a = 15\tau_c$ to allow for an initial transient regime of the cloning algorithm.
 Then, we chose $N = 1024$ to obtain a computational cost of order $\mathcal{O}(10^4 \tau_c)$, \textit{i.e.} roughly one hundredth of the computational cost associated with the direct numerical simulation used for direct sampling in section~\ref{sec:direct_sampling}.
 Finally, we set $\tau = \tau_c / 2$.
-\textbf{How do we set k?}
+\textbf{Thibault: Explain the choice of k}
 
 \begin{figure}
   \centering
