--- a/biblio.bib
+++ b/biblio.bib
@@ -736,3 +736,16 @@ doi = {10.1119/1.18168},
   HAL_ID = {hal-01142704},
   HAL_VERSION = {v1},
 }
+@article{kanev2010,
+author = {Kanev, Stoyan and van Engelen, Tim},
+title = {Wind turbine extreme gust control},
+journal = {Wind Energy},
+volume = {13},
+number = {1},
+pages = {18-35},
+keywords = {wind speed estimation, wind direction estimation, blade-effective wind speeds, extreme event recognition, extreme event control, load reduction},
+doi = {10.1002/we.338},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/we.338},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/we.338},
+year = {2010}
+}
