Update final paragraph on AMS

--- a/jfm/draft_p2_jfm.tex
+++ b/jfm/draft_p2_jfm.tex
@@ -719,10 +719,8 @@ We stress that this phenomenology is independent of the choice of $N$ and $T_a$.
 Increasing the size of the initial ensemble can only increase the amplitude of the the global maximum attained initially, but does not solve the issue of overlapping trajectories.
 Increasing $T_a$ allows further time for resampled trajectories to develop rare fluctuations, however after a duration $\Delta T \geq \tau_L > \tau_c$, and therefore decorrelated from the resampling.
 
-Our results indicate that the \ac{ams} cannot be straightforwardly applied to convective flows past obstacles,
-in which the timescale of extreme events (here a drag fluctuation) is smaller than the duration required
-for trajectories to separate under the influence of turbulence.
-The the author's knowledge, this result is the first evidence of the limitations of splitting approaches such as the \ac{ams} for complex systems, for which the only available choice for the score function displays a memory. \textbf{Do we agree on this last paragraph?}
+Our results indicate that the \ac{ams} does not work with this simple choice of score function.
+Better results may be obtained by using a different score function, but at this stage we do not know how to build such a score function for this specific problem.
 
 \section{The cloning algorithm}
 \label{sec:cloning}
