Add section into the appendix on the perturbation

--- a/jfm/appendix_perturbation.tex
+++ b/jfm/appendix_perturbation.tex
@@ -1,3 +1,5 @@
+\section{Perturbation at branching time}
+\label{app:perturb_branching_time}
 As mentioned in sections~\ref{sec:ams} and~\ref{sec:cloning}, the application of the \ac{ams} and the cloning algorithm to deterministic systems require the the addition of a perturbation to the initial condition of
 resampled trajectories.
 In the absence of any perturbation, the resampling would not yield new trajectories, but instead exact copies of the trajectories the resampling is based on.
@@ -39,6 +41,7 @@ Figure~\ref{fig:pdf_drag_with_perturbation} shows that the correct statistics ar
   \caption{Estimation of the \ac{pdf} with and without periodic perturbations}
   \label{fig:pdf_drag_with_perturbation}
 \end{figure}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "draft_p2_jfm"
