--- a/jfm/draft_p2_jfm.tex
+++ b/jfm/draft_p2_jfm.tex
@@ -39,10 +39,6 @@
 	short=AMS,
 	long=Adaptive Multilevel Splitting,
 }
-\DeclareAcronym{tams}{
-	short=TAMS,
-	long=Trajectory Adaptive Multilevel Splitting,
-}
 \DeclareAcronym{scgf}{
 	short=SCGF,
 	long=Scaled Cumulant Generating Function,
@@ -116,74 +112,7 @@ While it is shown that the \ac{ams} algorithm does not yield significant run-tim
 Beyond the study of applicability of rare-event sampling techniques to a fluid-mechanical problem, this work also includes a detailed phenomenological description of extreme-drag events of a turbulent flow on a bluff body. }
 \end{abstract}
 
-\section{Introduction}
-
-% general comments on physical problem %
-%
-Turbulent flows are important in a variety of natural phenomena, industrial and civil applications.
-Their characteristic feature is the spontaneous development of intense and sporadic motions associated with extreme internal forces \citep{lesieur_book,donzis_sreenivasan_2010,Yeung}.
-``Extreme'' refers here to fluctuations that can deviate from the mean value by ${\cal{O}}(10)$ standard deviations.
-In engineering, the nature of such extreme dynamical events and their statistics are of crucial interest to predict excessive mechanical efforts, which can threaten the structural integrity of embedded structures.
-%
-
-From the viewpoint of chaotic dynamical systems, turbulence in fluids is linked to non-linearity and strong departure from statistical equilibrium \citep{KRAICHNAN}.
-The use of analytical perturbative methods in identifying resonant interactions among degrees of freedom responsible for extreme fluctuations is unsuccessful.
-Otherwise, simulation offers a practical approach to gain physical insight into these events, quantifying their intensity and estimating their frequency of occurrence.
-However, this requires very long simulations since these events are rare.
-% general def on rare-event sampling %
-%
-{Rare-event sampling \EL{refers} to a large body of methods that aim at exploring preferentially regions of phase space corresponding to rare events, that would otherwise be accessed with a very low probability through a brute-force direct sampling.}
-%
-In the present work, a computational study of extreme mechanical efforts acting on an immersed bluff body is \EL{conducted} by using both very long time-series (direct sampling) and rare-event sampling techniques.
-%
-
-% next two paragraphs may be too technical -- Find a way to summarize them in a few sentences accessible to a broad audience in fluid mechanics? Notion of action will be vague for many readers
-%
-In fluid turbulence, rare-event sampling has been approached mainly from the perspective of simplified dynamics such as the one-dimensional Burgers' equation with a stochastic forcing \citep{bec_burgers_2007}. In this case, dynamics can be sampled by using a Markov chain Monte-Carlo algorithm \citep{duben_monte_2008,mesterhazy2011anomalous,mesterhazy2013lattice} that provides a framework for rare-event sampling.
-%
-An alternative approach is based on instantons \citep{gurarie_instantons_1996,grafke2015instanton} and applies to stochastically driven systems in the limit of weak noise.
-Instantons refer to the most probable trajectories in phase space that achieve a given rare event (in the limit of weak noise). Suitable numerical schemes can be used to evaluate instantons as well as the related probabilities of rare events \citep{chernykh_large_2001,grafke_instanton_2013,grigorio_instantons_2017,laurie2015computation,bouchet2014langevin}.
-An example is the investigation of the physics of rogue waves~\citep{dematteis2018rogue,dematteis2019experimental}.
-%
-A drawback of the aforementioned approaches is their limitation to simple and stochastically driven dynamics.
-%
-%
-%
-In this paper, a more general approach is considered for complex, possibly deterministic, dynamical systems.
-It is based on sampling algorithms relying on \emph{selection rules} applied to an ensemble of trajectories, and is designed to sample rare events of some observable with a higher frequency.
-%
-%
-Even though such ideas date back to the early 1950s, they have received ever-growing interest over the the last twenty years with successful applications in various domains such as chemistry \citep{van_erp_elaborating_2005,escobedo_transition_2009,teo_adaptive_2016}, biophysics \citep{huber_weighted-ensemble_1996,zuckerman2017weighted,bolhuis2005kinetic}, nuclear physics \citep{louvin2017}, nonlinear dynamical systems \citep{tailleur_probing_2007} and communication networks simulation \citep{villen-altamirano_restart:_1994}.
-More importantly, these type of algorithms have been shown to be useful for the study of rare events in simple deterministic dynamics~\citep{wouters2016rare}.
-%
-%
-\EL{An original contribution of the present work is certainly to test the application of rare-event sampling algorithms in the context of far-from-equilibrium dynamics with an irreducible very large number of degrees of freedom. }
-%Let us remark that most of previous successful applications involve dynamical systems with low-dimensional attractors. \EL{is it TRUE? \#11}
-%
-Two different algorithms suitable for out-of-equilibrium dynamics are considered and compared. Namely, the Adaptive Multilevel Splitting algorithm and the Giardina-Kurchan-Tailleur-Lecomte algorithm.
-%
-
-{The paper is organized in two parts. The first part highlights the phenomenology of extreme fluctuations of the drag force acting on a square placed in a two-dimensional turbulent channel flow. This study is based on the simulation of the flow over a very long duration, made possible by the relative simplicity of the flow.}
-%
-Motivation for this study is twofold.
-Firstly, it provides a detailed description of the statistics and dynamics related to extreme drag fluctuations. This analysis is informative from the  viewpoint of fluid mechanics and, to the best of our knowledge, has never been reported before.
-Secondly, it yields reference results that are required to validate the outputs of rare-event algorithms and to evaluate the possible gain obtained from them. This assessment is developed in the second part of the paper.
-
-% Annonce du plan
-In more detail,  the flow set-up is introduced and the dynamics related to typical
-drag fluctuations is described in section~\ref{sec:test_flow}.
-The statistical properties of the drag are then discussed.
-In section~\ref{sec:direct_sampling}, \EL{the phenomenology of  extreme
-	drag fluctuations} is investigated based on a direct sampling approach.
-Both the instantaneous drag and time-averaged drag are considered.
-It is found that sampled extreme events for the instantaneous drag share very similar dynamics. Furthermore, extreme fluctuations for the time-averaged drag can be connected to the statistics of the instantaneous drag.
-\sout{This feature is well supported by theoretical arguments applied to simplified stochastic dynamics.}
-Section~\ref{sec:rare_events_algorithms} reports the applicability of both the \ac{ams} and \ac{gktl} algorithms to the numerical simulation of extreme drag fluctuations, by using the same flow configuration.
-In section~\ref{sec:ams}, we show that the use of the \ac{ams} algorithm is not successful, or at least not straightforwardly. This difficulty is put in perspective with the phenomenology developed in the previous sections.
-Section~\ref{sec:gktl} presents the computation of extremes of the time-averaged drag, using the \ac{gktl} algorithm.
-This latter allows an exceptional reduction of the computational cost required to simulate trajectories corresponding to extreme time-averaged drag values.
-As a specific \EL{successful} application, the \ac{gktl} algorithm is used to compute the return times of extreme fluctuations of the time-averaged drag acting on the immersed obstacle.
-Perspectives and conclusion end this work.
+\include{introduction}
 
 \section{Description of the numerical case study}
 \label{sec:test_flow}
@@ -672,7 +601,7 @@ Note that these trajectories are not statistically independent, however rigorous
 Most previous applications of the \ac{ams} and cloning algorithm target stochastic dynamics.
 We stress that this is not the case in this work, as the target flow model is fully deterministic.
 Because in both algorithms the initial condition of resampled trajectories is taken as the flow state of another, it is therefore required to add a random perturbation to the initial conditions of resampled trajectories, so that they separate from the trajectory they are resampled from.
-The amplitude of this perturbation is chosen very low, so as not to impact the statistics of the dynamics.
+The amplitude of this perturbation is chosen very low, and it was tested that it does not impact the statistics of the sampled trajectories.
 The separation of trajectories under this slight perturbation is guaranteed by the chaoticty of the flow.
 For further details about the addition of this perturbation, see appendix~\ref{sec:app_perturbation}.
 
@@ -744,7 +673,6 @@ Consistently with section~\ref{sec:time_avg}, we aim at sampling trajectories wi
 Consequently, we fixed $T_a = 15\tau_c$ to allow for an initial transient regime of the cloning algorithm.
 Then, we chose $N = 1024$ to obtain a computational cost of order $\mathcal{O}(10^4 \tau_c)$, \textit{i.e.} roughly one hundredth of the computational cost associated with the direct numerical simulation used for direct sampling in section~\ref{sec:direct_sampling}.
 Finally, we set $\tau = \tau_c / 2$.
-\textbf{Thibault: Explain the choice of k}
 
 \begin{figure}
   \centering
@@ -877,168 +805,11 @@ Simulations have been performed on the local HPC facilities at École Normale Su
 The facilities at PSMN are supported by the Auvergne-Rhône-Alpes region (GRANT CPRT07-13 CIRA) and the national Equip@Meso grant (ANR-10-EQPX-29-01).
 
 \appendix
-\section{The \acl{lbm}}
-\label{app:lbm}
 
-% details about LBM
-In the LB method, the fluid is viewed as a population of particles that collide, redistribute and propagate along the different links of a discrete lattice \EL{(see \cite{book_lbm} for a comprehensive introduction)}.
-In our two-dimensional situation, the so-called D2Q9 lattice with only nine possible velocities $\{\mathbf{c_i}\}_{i=0...8}$ at each node has been adopted (see  Fig.~\ref{fig:D2Q9}).
-Locally, the macroscopic flow variables (per unit volume) are recovered by summing over the densities of particles $\{f_i\}_{i=0...8}$ moving with the different velocities, i.e.
-\[
-\rho(\mathbf{x},t) = \sum_i f_i(\mathbf{x},t) \quad \mathrm{and}\quad \rho(\mathbf{x},t) \mathbf u(\mathbf{x},t) = \sum_i f_i(\mathbf{x},t) \mathbf{c_i}
-\]
-for the mass density and the fluid momentum respectively. The assumption of weak compressibility (for an ideal gas) is made so that the pressure is directly proportional to the mass density: $p = c_s^2 \rho$ where $c_s$ is interpreted as a speed of sound.
-
-\begin{figure}
-	\centering
-	\includegraphics[width=0.3\linewidth]{D2Q9/D2Q9}
-	\caption{Sketch of the D2Q9 lattice. Particles move exactly from a lattice node towards one of its nine neighbours (including the node itself) during one time step. By definition, the lattice spacing is related to the time step by $\Delta x/ \Delta t = \sqrt{3} c_s$ where $c_s$ is interpreted as a speed of sound.}
-	\label{fig:D2Q9}
-\end{figure}
-
-
-% algo
-%
-The complexity of the flow emerges from the repeated application of simple rules of streaming and collision. The \ac{lbm} advances the local densities of particles $f_i(\mathbf{x},t)$ moving with velocities $\mathbf{c}_i$  in a two-step procedure. Namely, an \emph{exact} streaming step
-\begin{equation}
-  \label{eq:lbe}
-  f_i(\mathbf{x}+\mathbf{c}_i \Delta t, t + \Delta t) = f_i^{\mathrm{out}}(\mathbf{x},t)
-\end{equation}
-during which particles move with their own velocity to a neighbouring node, and an instantaneous collision step
-\[
-f_i^{\mathrm{out}}(\mathbf{x},t) = -\frac 1 {\tau_\nu} \left(f_i(\mathbf{x},t) - f_i^\mathrm{eq}(\mathbf{x},t) \right)
-\]
-which achieves a relaxation of local densities towards an absolute equilibrium (at the macroscopic level). The time-scale $\tau_\nu$ (in lattice unit) is related to the kinematic viscosity of the fluid by
-\[
-\nu = \left( {\tau_\nu} - \frac 1 2 \right) c_s^2 ~\Delta t
-\]
-This simplification of the collision kernel is known as the BGK approximation in the kinetic theory of gas \EL{\citep{BGK}}.
-%
-The equilibrium function is given by
-\begin{equation}
-  \label{eq:lbe_eq}
-  f_i^\mathrm{eq}(\mathbf{x},t) = w_i  \rho(\mathbf{x},t) \left( 1 + \frac{\mathrm u(\mathbf{x},t) \cdot \mathbf{c_i}}{c_s^2} +
-    \frac{u_\alpha(\mathbf{x},t) u_\beta(\mathbf{x},t)({c_i}_\alpha {c_i}_\beta - c_s^2 \delta_{\alpha\beta})}{2 c_s^4} \right),
-\end{equation}
-with the weight factors $w_0=4/9,~w_{1...4} = 1/9$ and $w_{5...8}=1/36$ for the D2Q9 lattice.
-This discrete Lattice Boltzmann scheme is second-order accurate in $\Delta x $ and compliant to the weakly-compressible Navier-Stokes equations with a third-order error in $\mathrm{Ma}=|\mathbf{u}|/c_s$ as the lattice spacing vanishes, i.e. $\Delta x \to 0$ \EL{\citep{succi_book}}.
-
-As mentioned before, the pressure is directly accessible from the mass density: $p = \rho c_s^2$. The viscous stress is also obtained easily from the densities of particles by
-\[
-\tau^\mathrm{visc.}_{\alpha \beta} = -\frac{\nu}{\tau_\nu ~ c_s^2 \Delta t} \sum_i  {c_i}_\alpha {c_i}_\beta (f_i - f_i^\mathrm{eq})
-\]
-so that the total stress expresses as
-\begin{equation}\label{eq:def_stress}
-\tau_{\alpha \beta} = -  c_s^2 \sum_i f_i ~ \delta_{\alpha\beta}  - \frac{\nu}{\tau_\nu ~ c_s^2 \Delta t} \sum_i  {c_i}_\alpha {c_i}_\beta (f_i - f_i^\mathrm{eq})
-\end{equation}
-Finally, let us mention that in the present context of turbulent flows, the single-relaxation-time BGK collision has been replaced by a multi-relaxation-time procedure based on central moments with an improved stability \citep{De_Rosis_2016}.
-
-\ZZ{
-	\section{Illustration of the \ac{ams} on a simple case: the \acl{ou} process}
-	\label{app:AMS_on_OU}
-
-	\begin{figure}
-		\centering
-		\includegraphics[width=.7\linewidth]{AMS_OU/AMS_OU.png}
-		\caption{Efficiency of the \EL{\ac{ams} algorithm} with respect to direct sampling in the case of an Ornstein-Uhlenbeck process \citep{lestang_computing_2018}. The red line represents the evolution of the maximum obtained from re-sampled trajectories as a function of the computational cost $C_{AMS}$. The blue line is the analytical solution for the return time of amplitude $a$.}
-		\label{fig:comparaison_temps_de_retour}
-	\end{figure}
-	Fluid dynamics is temporarily left aside and a one-dimensional \acl{ou} process is considered:
-	\begin{equation}
-	\label{eq:ou}
-	\dot{x} = -x + \eta (t),
-	\end{equation}
-	where $\eta$ is a Gaussian noise with $\langle \eta(t)\eta(t-t')\rangle = \delta(t-t')$.
-	This basic stochastic process will allow us to highlight differences with fluid dynamics.
-
-
-	The \ac{ams} is applied  to a set of $N=32$ trajectories $\{x_n(t)\}_{0\leq t \leq T_a}$ with $T_a=5\tau_c$.
-	Let us note that the correlation time is $\tau_c = 1$ for the process defined by Eq.~\eqref{eq:ou}.
-	Our objective is to sample fluctuations $x\geq a$ with $a$ being very large compared to the typical values of $x$.
-	The score function is simply $x(t)$ and a single trajectory is re-sampled at each iteration.
-	%
-	%Let $a_j$ be the maximum of the re-sampled trajectory at iteration $j$.
-	%
-	The computational cost of the algorithm after $J$ iterations is therefore related to the simulation of the $N$ initial trajectories and the re-sampling of $J$ trajectories.
-	Fig.~\ref{fig:comparaison_temps_de_retour} compares the computational cost of the \ac{ams} algorithm with that of a direct sampling.
-	In the latter, the typical computational cost is simply the return time $r(a)$.
-	One can see that the successive re-samplings of the \ac{ams} algorithm lead rapidly to trajectories exhibiting extreme fluctuations.
-	For large $a$, the computational cost is many orders of magnitude lower than that obtained by direct sampling.
-
-	Undoubtedly, the \acl{ou} process has oversimplified dynamics to showcase the efficiency of the \ac{ams} algorithm.
-	The state space is one-dimensional and the choice of the score function is straightforward: It is $x$ itself.
-	In addition, the noise term in Eq.~\eqref{eq:ou} has no correlation in time, which implies that newly generated trajectories quickly separate from their parents. Such favorable features \EL{do not} \textit{a priori} persist in the case of fluid dynamics.
-}
-
-
-\ZZ{
-\section{The \ac{gktl} algorithm}
-\label{app:gktl_description}
-The \ac{gktl} algorithm is based on the simulation of an ensemble of $N$ trajectories $\left\{\mathbf{x}_{n}(t)\right\}_{0\leq t \leq T_a}$ with $ n =1 \cdots N$ starting from independent random initial conditions.
-%
-Let us consider a real-valued observable of interest $A(\mathbf{x}(t))$, {\emph{e.g.} the drag $f_d(t)$}, and introduce a cloning period $\tau$.
-%
-At time instants $t_{i}=i\tau$ with $i=1,~2,~...,~T_{a}/\tau$ ($T_{a}$ is a multiple of $\tau$) a weight $W_{n}^{i}$ is assigned to each trajectory. This weight is defined ($t_0=0$) by
-%
-\begin{equation}
-W_{n}^{i}=\frac{e^{k\intop_{t_{i-1}}^{t_{i}}A(\mathbf{x}_{n}(t))dt}}{R_{i}}\quad \mbox{with the normalisation factor} \quad R_{i}=\frac{1}{N}\sum_{n=1}^{N}e^{k\int_{t_{i-1}}^{t_{i}}A(\mathbf{x}_{n}(t))dt}
-\label{eq:Weight}
-\end{equation}
-so that $\sum_{n=1}^N W_n^i = N$.
-%
-%
-{The weights $\{W_{n}^{i}\}_{n=1\cdots N}$ determine how many copies of each trajectory are made at time $t=t_i$. The parameter $k$ characterizes the amplitude of the statistical bias involved in the algorithm (see Fig.~\ref{fig:IS_GKTL}). For more information about the practical implementation of the algorithm, the interested reader can refer to~\cite{brewer2018efficient, lestang:tel-01974316}}.
-The application of this re-sampling at each step $t_i$ eventually leads to a biased sampling in the trajectory space; the trajectories corresponding to extreme values of $\int_{0}^{T_a}A(\mathbf{x}_{n}(t))dt$ have a higher probability.
-%
-The sampled biased distribution writes
-%
-\begin{align}
-\mathbb{P}_{k}\left(\left\{ \mathbf{X}(t)\right\} _{0\leq t\leq T_{a}}=\left\{ \mathbf{x}(t)\right\} _{0\leq t\leq T_{a}}\right) &\underset{N\rightarrow\infty}{\sim} \frac{e^{k\int_{0}^{T_{a}}A(\mathbf{x}(t))dt}}{Z(k,T_a)}\mathbb{\mathbb{P}}_{0}\left(\left\{ \mathbf{X}(t)\right\} _{0\leq t\leq T_{a}}=\left\{ \mathbf{x}(t)\right\} _{0\leq t\leq T_{a}}\right),
-\label{eq:Biased_Path_Approximation}
-\end{align}
-where
-$\mathbb{P}_{0}\left(\left\{ \mathbf{X}(t)\right\} _{0\leq t\leq T_{a}} = \left\{ \mathbf{x}(t)\right\} _{0\leq t\leq T_{a}}\right)$
-refers formally to the probability of observing the trajectory
-$\left\{ \mathbf{x}(t)\right\} _{0\leq t\leq T_{a}}$.
-The normalisation factor is given by $Z(k,T_a)=\prod_{i=1}^{T_a/\tau}R_i$.
-%
-One can mention that
-\begin{equation}
-\label{eq:mean_field}
-Z(k,T_a) \underset{N\to \infty}{\sim} \mathbb{E}_0\left[e^{k\int_{0}^{T_{a}}A(\mathbf{X}(t))dt}\right],
-\end{equation}
-with $\mathbb{E}_{0}$ being the expectation value with respect to the
-distribution $\mathbb{P}_{0}$.
-This result relies on the \textit{mean-field approximation}
-\begin{equation}
-R_{i}=\frac{1}{N}\sum_{n=1}^{N}e^{k\int_{t_{i-1}}^{t_{i}}A(\mathbf{X}_{n}(t))dt}\underset{N\rightarrow\infty}{\sim} Z(k,t_i)= \mathbb{E}_{i}\left[e^{k\int_{t_{i-1}}^{t_{i}}A(\mathbf{X}(t))dt}\right],
-\label{eq:Mean_Field_Approximation}
-\end{equation}
-where $\mathbb{E}_{i}[.]$ denotes the expectation value with respect to the biased distribution $\mathbb{P}_k^{(i)}$ obtained after $i$ cloning steps.
-The typical relative error related to this approximation can be shown to be of order $1/\sqrt{N}$ for a family of rare-event algorithms including the \ac{gktl} algorithm~\citep{DelMoralBook,DelMoral2013}.
-%
-Rejected trajectories are discarded from the statistics.
-Eventually, an effective ensemble of $N$ trajectories of duration $T_{a}$ is obtained, distributed according to $\mathbb{P}_{k}$.
-
-A key feature of the \ac{gktl} algorithm is that the sampling procedure does not involve any alteration of the dynamics. \EL{All resampled trajectories are solutions of the original dynamical.}
-%This is true for stochastic dynamics.
-\EL{Nevertheless, it should be noted that a small random perturbation is introduced in the cloning procedure to force clones from the same trajectory to separate, \emph{i.e.} artificial randomness is introduced so that the cloning procedure is effective for deterministic dynamics.
-	As for the \ac{ams} algorithm, it has been checked that this perturbation did not affect the statistics of the sampled trajectories.}
-%
-%
-%However, similarly to the case of \ac{ams}, randomness must be artificially introduced for the cloning procedure to be effective for deterministic dynamics in order to separate the clones. We have proceeded in the same way as as described in section~\ref{sec:ams_drag}.
-%
-%
-Eventually, the sampled trajectories obtained with the \ac{gktl} algorithm can be used to compute the statistical properties of any observable with respect to the distribution $\mathbb{P}_{0}$ from the distribution $\mathbb{P}_{k}$ by using Eq.~\eqref{eq:Biased_Path_Approximation}.
-%
-}
-
+\include{appendix_lbm}
 \include{appendix_ams}
-
-\EL{
-	\section{Perturbation at branching time}
-	\label{app:perturb_branching_time}
-}
+\include{appendix_gktl}
+\include{appendix_perturbation}
 
 
 \bibliographystyle{jfm}
